[package]
name = "rpr-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hmac = "0.12.1"
sha3 = "0.10.8"
crc32fast = "1.3.2"
serde = { version = "1.0.188", features = ["derive"] }
serde-big-array = "0.5.1"
anyhow = "1.0.75"
bincode = "1.3.3"
base64 = "0.21.4"
log = "0.4.20"
os_info = "3.7.0"
backtrace = "0.3.68"
