[package]
name = "rpr-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
toml = "0.8.1"
log = "0.4.20"
pretty_env_logger = "0.5.0"
uuid = "1.4.1"
anyhow = "1.0.75"
wherr = { version = "0.1.7", features = ["anyhow"] }
bincode = "1.3.3"
rand = "0.8.5"

[dependencies.rpr-proto]
path = "../rpr-proto"