[package]
name = "rpr-test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
bincode = "1.3.3"
anyhow = "1.0.75"
uuid = "1.4.1"

[dependencies.rpr-proto]
path = "../rpr-proto"